# learnC-

./: CMakeLists.txt
include/OOP/: Array1DOOP.h  Array2DOOP.h  Circle.h  Point.h  Point2.h  Student.h
include/Vector/: Vector.h
include/array/: Array1D.h  Matrix.h
include/basic/: Variable.h  bitWise.h  printOddNumbers.h  typeConversion.h
include/pointer/: TestPointer.h  arrayAndPointer.h  changeValue.h  maxArray.h  nullPointer.h  pointer1.h  sizeOf.h  sumArray.h  toUpper.h
include/practice/: countDistinctElements.h  oddFirstDigitAverage.h  primeNumber.h  printPrimeNumber.h
src/Array/: Array1D.cpp  Matrix.cpp  TestArray.cpp
src/OOP/: Array1DOOP.cpp  Array2DOOP.cpp  Circle.cpp  Point.cpp  Point2.cpp  Student.cpp
src/basic/: Test.cpp  Variable.cpp  bitWise.cpp  printOddNumbers.cpp  typeConversion.cpp
src/pointer/: TestPointer.cpp  arrayAndPointer.cpp  changeValue.cpp  maxArray.cpp  nullPointer.cpp  pointer1.cpp  sizeOf.cpp  sumArray.cpp  toUpper.cpp
src/practice/: countDistinctElements.cpp  oddFirstDigitAverage.cpp  primeNumber.cpp  printPrimeNumber.cpp
src/vector/: Vector.cpp
